Fixed horizontal scroll in messages

--- a/OldMessages.theme.css
+++ b/OldMessages.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"OldMessages","description":"Restores old messages style","author":"PseudoResonance","version":"1.1.3"}*//
+//META{"name":"OldMessages","description":"Restores old messages style","author":"PseudoResonance","version":"1.1.4"}*//
 
 :root {
 	--message-spacing:1.0625rem;
@@ -83,7 +83,7 @@
 .buttonContainer-DHceWr .buttons-cl5qTG {
 	top:-5px;
 	background-color:transparent !important;
-	right:-6px;
+	padding-right:0px;
 }
 
 .messages-3amgkR .message-2qnXI6.mentioned-xhSam7 .buttonContainer-DHceWr .buttons-cl5qTG div, .buttonContainer-DHceWr, .buttonContainer-DHceWr .buttons-cl5qTG div {
@@ -105,7 +105,7 @@
 
 /* Margin on text to accomodate buttons */
 .messages-3amgkR .message-2qnXI6 .markup-2BOw-j {
-	margin-right:28px;
+	margin-right:22px;
 }
 
 /* Rotate settings button */
